[package]
name = "zklogin-demo"
edition = "2021"

[dependencies]
axum            = "0.7"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tokio           = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell       = "1"
rand            = { version = "0.8", features = ["std"] }
stellar-xdr     = "^22"
soroban-sdk     = "^22"
soroban-client  = "0.5.1"
hex             = "0.4"
anyhow = "1.0.99"
